models/tests/errors/semantic/typeoverride.ucl
// UCLID TEST
// Solver=cvc4
// Result=None

type main;

module main {
}